--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           python-version: '3.11.3'
       
       - name: Install all necessary packages
-        run: pip install requests pandas
+        run: pip install requests pandas html5lib
 
       - name: Run the scraping script
         run: python updater.py
